1.21 *developing*

*world*
- Pets can drink 'medicine' even when they aren't hungry. Making them easier to maintain in battle.
- New trader NPC (Mizuno) travels around remote parts of Ados selling ice arrows for black pearls.
- Rebalancing vampire, chaos swords.
- Photo booth at Mine Town Revival festival
- Small improvements to maps
- Small improvements to item and monster descriptions

*fixes*
- Help For the Harvest quest should work again.

*code*
- In TeleporterBehaviour, zoneName.startsWith() 
  now checks a variable so teleporting NPCs can be a little more customizable.
- TeleporterBehaviour can now be passed an array of zones to choose from or leave null for the default list.

*future changes* 
- preparation for testing pet leveling and growing
- Fighting pets will attack things along side their owners. Instead of just in self-defense.



1.20

*world*
- Humans lose conscious when scuba gear is take off under water
- Improved thunderstorms
- Archer combat is now visible
- Harold understands "prolong all" now

*code*
- Support Postgres databases in addition to H2 (recommended) and MySQL
- Setup Travis for continuous integration tests and fixed some order dependent tests 
- Migrated test coverage analysis from Cobertura to Jacoco 
- Git repository is mirrored instantaneously between Github and Sourceforge in both directions
- Yearly special event quests now pick up the current year as part of their quest slot automatically
- Backend for puzzles

*fixes*
- Christmas quest "Goodies for Rudolph" is now repeatable next year
- Fixed maximization state being sometimes saved incorrectly.
- Database index are now created automatically




1.19

*world*
- new interesting under water zone
- new quest for a scuba diving license
- new Kraken creature
- Zekiel can make enhanced lion shields
- Cats can drink milk now
- map improvements

*code*
- fixed compiler warnings and code cleanup

*client*