@@ -10,8 +10,11 @@
 - Small improvements to maps
 - Small improvements to item and monster descriptions
 
+*client*
+- Default action of chest changed to open/inspect instead of look
+
 *fixes*
-- Help For the Harvest quest should work again.
+- Help For the Harvest quest works again.
 
 *code*
 - In TeleporterBehaviour, zoneName.startsWith() 
